--- a/app/src/main/res/layout/row_manage_parts.xml
+++ b/app/src/main/res/layout/row_manage_parts.xml
@@ -32,139 +32,154 @@
             android:layout_gravity="center_horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/partsManageImageView"
+                android:id="@+id/partImageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="34dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/gear_def_icon"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/deleteIcon"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:shapeAppearance="@style/circle" />
 
-            <LinearLayout
-                android:id="@+id/lmp1"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/txtPartName"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/lmp2"
-                app:layout_constraintHorizontal_bias="0.3"
-                app:layout_constraintStart_toEndOf="@+id/partsManageImageView"
-                app:layout_constraintTop_toTopOf="parent">
+                android:text="Name"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@id/txtPrice"
+                app:layout_constraintTop_toBottomOf="@id/deleteIcon"
+                app:layout_constraintStart_toEndOf="@id/partImageView"/>
 
-                <TextView
-                    android:id="@+id/txtManagePartName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtManageMake"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/loginViewsMargin"
-                        android:layout_marginRight="@dimen/loginViewsMargin"
-                        android:text="Make"
-                        android:textColor="@color/colorPrimaryDark" />
-
-                    <TextView
-                        android:id="@+id/txtManageYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/loginViewsMargin"
-                        android:text="Year"
-                        android:textColor="@color/colorPrimaryDark" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtManageModel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/loginViewsMargin"
-                        android:layout_marginRight="@dimen/loginViewsMargin"
-                        android:text="Model"
-                        android:textColor="@color/colorPrimaryDark" />
-
-                    <TextView
-                        android:id="@+id/txtManageCategory"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/loginViewsMargin"
-                        android:text="Category"
-                        android:textColor="@color/colorPrimaryDark" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lmp2"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/txtMake"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginEnd="10dp"
+                android:text="Make"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginStart="15dp"
+                app:layout_constraintEnd_toStartOf="@id/txtModel"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintTop_toBottomOf="@id/txtPartName"
+                app:layout_constraintStart_toEndOf="@id/partImageView"/>
+
+            <TextView
+                android:id="@+id/txtYear"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginEnd="10dp"
+                android:text="Year"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/txtCategory"
+                app:layout_constraintTop_toBottomOf="@id/txtMake"
+                app:layout_constraintStart_toEndOf="@id/partImageView"
+                app:layout_constraintBottom_toBottomOf="@id/partImageView"/>
+
+            <TextView
+                android:id="@+id/txtModel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginEnd="15dp"
+                android:text="Model"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/txtPrice"
+                app:layout_constraintBaseline_toBaselineOf="@id/txtMake"
+                app:layout_constraintTop_toBottomOf="@id/txtPartName"
+                app:layout_constraintStart_toEndOf="@id/txtMake"/>
+
+            <TextView
+                android:id="@+id/txtCategory"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginEnd="15dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="Category"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/txtPrice"
+                app:layout_constraintBaseline_toBaselineOf="@id/txtYear"
+                app:layout_constraintTop_toBottomOf="@id/txtModel"
+                app:layout_constraintStart_toEndOf="@id/txtYear"
+                app:layout_constraintBottom_toBottomOf="@id/partImageView"/>
+
+
+            <TextView
+                android:id="@+id/txtPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="USD Price "
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/themeColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/txtPartName"
+                app:layout_constraintStart_toEndOf="@id/txtPartName"
+                app:layout_constraintTop_toBottomOf="@id/deleteIcon"
+                app:layout_constraintEnd_toStartOf="@id/deleteIcon"/>
+
+            <TextView
+                android:id="@+id/txtNegotiable"
+                android:layout_width="0dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="15dp"
+                android:text="Negotiable"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/deleteIcon"
+                app:layout_constraintBaseline_toBaselineOf="@id/txtModel"
+                app:layout_constraintTop_toBottomOf="@id/txtPrice"
+                app:layout_constraintStart_toEndOf="@id/txtPartName"/>
+
+            <TextView
+                android:id="@+id/txtCondition"
+                android:layout_width="0dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginStart="15dp"
+                android:text="Condition"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/deleteIcon"
+                app:layout_constraintBaseline_toBaselineOf="@id/txtCategory"
+                app:layout_constraintTop_toBottomOf="@id/txtNegotiable"
+                app:layout_constraintStart_toEndOf="@id/txtPartName"/>
+
+            <ImageView
+                android:id="@+id/deleteIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/delete_icon"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/txtManagePrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/loginViewsMargin"
-                    android:text="USD Price "
-                    android:textColor="@color/themeColor"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/txtManageNegotiable"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Negotiable"
-                    android:textColor="@color/colorPrimaryDark" />
-
-                <TextView
-                    android:id="@+id/txtManageCondition"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="18dp"
-                    android:text="Condition"
-                    android:textColor="@color/colorPrimaryDark" />
-
-            </LinearLayout>
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/icon_delete"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="10dp"
-                android:scaleType="fitXY"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/delete_icon" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
