--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".View.Activities.ViewDataActivity">
+    tools:context=".View.Activities.InfoActivity">
 
     <TextView
         android:id="@+id/reportTitle"
@@ -17,7 +17,7 @@
         android:paddingStart="52dp"
         android:paddingTop="10dp"
         android:paddingBottom="1dp"
-        android:text="@string/report"
+        android:text="@string/info"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/back_arrow12"
+        android:id="@+id/back_arrow13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/dataContent"
+                android:id="@+id/infoContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/darkTextColor"
@@ -62,8 +62,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
