--- a/app/src/main/res/layout/fragment_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_diagnostics.xml
@@ -10,13 +10,24 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/importData"
         style="@style/loginButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/import_car_s_diagnostics"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/carDataFilter"
+        app:layout_constraintStart_toEndOf="@id/infoData"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/infoData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="@dimen/loginViewsMargin"
+        android:src="@drawable/info_outline"
+        app:layout_constraintEnd_toStartOf="@id/importData"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/loginViewsMargin"
         android:elevation="8dp"
         android:src="@drawable/ic_filter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,132 +58,151 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/carDataFilter">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true">
 
-            <TextView
-                android:id="@+id/carDataFilterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                android:layout_marginTop="10dp"
-                android:text="@string/filter"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="35sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/dayFilterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:text="@string/day"
-                android:textColor="@color/darkTextColor"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/carDataFilterText" />
+                <TextView
+                    android:id="@+id/carDataFilterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/loginViewsMargin"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/filter"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="35sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <Spinner
-                android:id="@+id/daySpinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/themeColor"
-                app:layout_constraintBaseline_toBaselineOf="@id/dayFilterText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/monthFilterText" />
+                <TextView
+                    android:id="@+id/dataClearAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginEnd="@dimen/loginViewsMargin"
+                    android:text="@string/clear_all"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="15sp"
+                    app:layout_constraintBaseline_toBaselineOf="@id/carDataFilterText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/monthFilterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:text="@string/month"
-                android:textColor="@color/darkTextColor"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/dayFilterText" />
+                <TextView
+                    android:id="@+id/dayFilterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/loginViewsMargin"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    android:text="@string/day"
+                    android:textColor="@color/darkTextColor"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/carDataFilterText" />
 
-            <Spinner
-                android:id="@+id/monthSpinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/themeColor"
-                app:layout_constraintBaseline_toBaselineOf="@id/monthFilterText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/monthFilterText" />
+                <Spinner
+                    android:id="@+id/daySpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/themeColor"
+                    app:layout_constraintBaseline_toBaselineOf="@id/dayFilterText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
-            <TextView
-                android:id="@+id/yearFilterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:text="@string/car_data_year"
-                android:textColor="@color/darkTextColor"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/monthFilterText" />
+                <TextView
+                    android:id="@+id/monthFilterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/loginViewsMargin"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    android:text="@string/month"
+                    android:textColor="@color/darkTextColor"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/dayFilterText" />
 
-            <Spinner
-                android:id="@+id/yearSpinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/themeColor"
-                app:layout_constraintBaseline_toBaselineOf="@id/yearFilterText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/monthFilterText" />
+                <Spinner
+                    android:id="@+id/monthSpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/themeColor"
+                    app:layout_constraintBaseline_toBaselineOf="@id/monthFilterText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
-            <TextView
-                android:id="@+id/hourFilterText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:text="@string/hour"
-                android:textColor="@color/darkTextColor"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/yearFilterText" />
+                <TextView
+                    android:id="@+id/yearFilterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/loginViewsMargin"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    android:text="@string/car_data_year"
+                    android:textColor="@color/darkTextColor"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/monthFilterText" />
 
-            <Spinner
-                android:id="@+id/hourSpinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/themeColor"
-                app:layout_constraintBaseline_toBaselineOf="@id/hourFilterText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/monthFilterText" />
+                <Spinner
+                    android:id="@+id/yearSpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/themeColor"
+                    app:layout_constraintBaseline_toBaselineOf="@id/yearFilterText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/carDataFilterSubmit"
-                style="@style/loginButton"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/loginViewsMargin"
-                android:layout_marginBottom="@dimen/loginViewsMargin"
-                android:text="@string/submit"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/hourSpinner" />
+                <TextView
+                    android:id="@+id/hourFilterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/loginViewsMargin"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    android:text="@string/hour"
+                    android:textColor="@color/darkTextColor"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/yearFilterText" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <Spinner
+                    android:id="@+id/hourSpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/themeColor"
+                    app:layout_constraintBaseline_toBaselineOf="@id/hourFilterText"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/monthFilterText" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/carDataFilterSubmit"
+                    style="@style/loginButton"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    android:layout_marginBottom="@dimen/loginViewsMargin"
+                    android:text="@string/submit"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/hourSpinner" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
     </androidx.cardview.widget.CardView>
 
     <ListView
@@ -187,51 +217,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ipUserInput" />
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progress_bar_id"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:progressTint="@color/themeColor"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/status_text_id"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="@dimen/loginViewsMargin"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:layout_marginEnd="@dimen/loginViewsMargin"-->
-<!--        android:text="@string/status"-->
-<!--        android:visibility="visible"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/importData" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/status_text"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="10dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:layout_marginEnd="@dimen/loginViewsMargin"-->
-<!--        android:text="..."-->
-<!--        android:visibility="visible"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@id/status_text_id"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/importData" />-->
-
     <EditText
         android:id="@+id/ipServerInput"
         style="@style/modifiedEditText"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/enter_ip"
         android:inputType="text"
         android:maxLines="1"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/importData" />
@@ -239,12 +233,12 @@
     <EditText
         android:id="@+id/ipUserInput"
         style="@style/modifiedEditText"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4"
         android:inputType="text"
         android:maxLines="1"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ipServerInput" />
