--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -9,17 +9,17 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mechanicsCardSearch"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="15dp"
         android:backgroundTint="@color/themeColor"
         android:elevation="8dp"
         android:focusable="true"
         app:cardCornerRadius="26dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/mechanicsFilter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/mechanicsFilter"
         android:layout_marginTop="21dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/loginViewsMargin"
         android:elevation="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/mechanicsCardSearch"
